## 1.4.2 (20.03.2019) * fixed getting BxNavigationBar. When BxNavigationBar created from initWithRootController.

--- a/iBXTest/iBXTest/Resources/NavigationController.storyboard
+++ b/iBXTest/iBXTest/Resources/NavigationController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment version="2304" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -102,6 +102,91 @@
             </objects>
             <point key="canvasLocation" x="2361.5999999999999" y="3741.2293853073465"/>
         </scene>
+        <!--details-->
+        <scene sceneID="hcY-Pa-8dQ">
+            <objects>
+                <viewController id="AHr-Fd-q3s" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sOZ-GI-HGK"/>
+                        <viewControllerLayoutGuide type="bottom" id="54C-cj-ZHw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Xhw-6a-WLT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Empty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qO6-Ee-LVI">
+                                <rect key="frame" x="143" y="314" width="89" height="39"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="details" id="3pR-Xq-2jU"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hDd-uv-QRX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1990" y="5397"/>
+        </scene>
+        <!--Root View Controller-->
+        <scene sceneID="VLb-Qj-BKA">
+            <objects>
+                <tableViewController clearsSelectionOnViewWillAppear="NO" id="4B7-V7-5K3" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="FKH-dJ-MBR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="hMZ-vZ-A5K">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hMZ-vZ-A5K" id="pK3-Em-chC">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="4B7-V7-5K3" id="eLc-gK-Ywb"/>
+                            <outlet property="delegate" destination="4B7-V7-5K3" id="8u5-Zh-RAO"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="W18-NW-wbQ"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uDv-wp-vAo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2766" y="5397"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="1j1-sS-4LF">
+            <objects>
+                <navigationController id="yrz-qL-3fd" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="FgA-u8-iVs">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="4B7-V7-5K3" kind="relationship" relationship="rootViewController" id="Ki1-CR-eIa"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="N0v-eh-A88" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2766" y="4545"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="cei-tw-M6y">
+            <objects>
+                <splitViewController id="xjU-SG-8Vf" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="yrz-qL-3fd" kind="relationship" relationship="masterViewController" id="O4T-Kf-xsT"/>
+                        <segue destination="AHr-Fd-q3s" kind="relationship" relationship="detailViewController" id="E00-6i-uEc"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LOS-7t-1Zy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1991" y="4545"/>
+        </scene>
         <!--TestNavigation-->
         <scene sceneID="qoH-we-Lcj">
             <objects>
@@ -164,6 +249,19 @@
                                 </state>
                                 <connections>
                                     <action selector="btExitToRootClick:" destination="HjY-D9-nBs" eventType="touchUpInside" id="oNp-7j-Pzu"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mw6-ds-HJx">
+                                <rect key="frame" x="36" y="307" width="280" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="SplitController">
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <state key="selected">
+                                    <color key="titleColor" red="1" green="0.31409598770000002" blue="0.2345026335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="xjU-SG-8Vf" kind="presentation" id="NQz-r6-cgP"/>
                                 </connections>
                             </button>
                         </subviews>
