--- a/iBXTest/iBXTest/Resources/Main.storyboard
+++ b/iBXTest/iBXTest/Resources/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tEY-bW-i3I">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="tEY-bW-i3I">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment version="2304" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -523,7 +522,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BoB-85-LvC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2419.2000000000003" y="1228.785607196402"/>
+            <point key="canvasLocation" x="2671" y="1423"/>
         </scene>
         <!--Navigation Top View Controller-->
         <scene sceneID="kBY-bk-wRp">
@@ -539,7 +538,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3C3-TY-JZs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1428.8000000000002" y="1228.785607196402"/>
+            <point key="canvasLocation" x="1966" y="1407"/>
         </scene>
         <!--Navigation Top View Controller-->
         <scene sceneID="d3O-4e-vyw">
@@ -563,6 +562,7 @@
                 <navigationController definesPresentationContext="YES" id="ZeT-cN-fHp" customClass="NavigationTopViewController" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="onH-LQ-BJF"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2aB-i8-liO">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -1207,7 +1207,7 @@
                                         <rect key="frame" x="200" y="163" width="51" height="31"/>
                                     </switch>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="PD7-Yc-AiD">
-                                        <rect key="frame" x="142" y="207" width="166" height="29"/>
+                                        <rect key="frame" x="142" y="207" width="165" height="29"/>
                                         <segments>
                                             <segment title="Horizontal"/>
                                             <segment title="Vertical"/>
@@ -1223,7 +1223,7 @@
                                         <rect key="frame" x="200" y="243" width="51" height="31"/>
                                     </switch>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="6Wv-wP-CTe">
-                                        <rect key="frame" x="182" y="289" width="118" height="31"/>
+                                        <rect key="frame" x="182" y="289" width="117" height="31"/>
                                         <connections>
                                             <action selector="updateInertial:" destination="3hr-yE-NpP" eventType="valueChanged" id="d1k-PQ-LuZ"/>
                                         </connections>
@@ -1257,13 +1257,13 @@
                                         </connections>
                                     </stepper>
                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="LE1-eH-S60">
-                                        <rect key="frame" x="182" y="377" width="118" height="31"/>
+                                        <rect key="frame" x="182" y="377" width="117" height="31"/>
                                         <connections>
                                             <action selector="updateItemSize:" destination="3hr-yE-NpP" eventType="valueChanged" id="hci-AC-gCC"/>
                                         </connections>
                                     </slider>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="itemSize" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dCM-Fl-ABY">
-                                        <rect key="frame" x="20" y="381" width="130" height="21"/>
+                                        <rect key="frame" x="20" y="381.5" width="130" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
